--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.setcardgame">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,15 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SETCardGame">
         <activity
+            android:name=".ViewModel.multiplayer.MultiplayerEndScreenActivity"
+            android:exported="false"
+            android:label="Score"
+            android:screenOrientation="portrait"  />
+        <activity
             android:name=".ViewModel.scoreboard.WorldScoresActivity"
             android:exported="false"
             android:label="World Scores"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ViewModel.scoreboard.PlayerScoresActivity"
             android:exported="false"
             android:label="My Scores"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ViewModel.multiplayer.JoinGameActivity"
             android:exported="false"
